# personal-assistant-agent

./: .gitignore  Comprehensive_Cancer_Data_2026_Report.md  Comprehensive_Cancer_Report_2026.md  Comprehensive_Cancer_Research_Report_2026.md  Dockerfile  Global_Cancer_Statistics_2024_2026_Report.md  README.md  custom_reference.docx  docker-compose.yml  main.py  print_styles.css  pyproject.toml
agent/: personalAgent.py
config/: settings.py
memory/: celery_app.py  database.py  qdrant_memory.py  redis_memory.py
subagent/: communication.py  document.py  planner.py  research.py  upload.py
tasks/: backgorund_tasks.py
