[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.51",
    "celery>=5.6.3",
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "logfire[system-metrics]>=4.37.0",
    "markdown>=3.10.2",
    "openrouter>=0.11.44",
    "pandoc>=2.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-ai>=2.13.0",
    "pydantic-ai-harness>=0.7.1",
    "pydantic-ai-slim[duckduckgo,openai,openrouter]>=2.13.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "schema>=0.7.8",
    "sqlmodel>=0.0.39",
    "weasyprint>=69.0",
]
